# alchemy-best-practice

./: .gitignore  docker-compose.yml  main.py  output  pyproject.toml  pyproject.toml.poetry
alchemy_app/: __main__.py  example_async.py  example_of_context_session.py  example_select_last_message.py  select_query_method.py
alchemy_app/db/: __init__.py  base.py  dialog.py  message.py
